Sustituir método en deshuso
Se ha sustituido el constructor de integer por la llamada a el método estático ya que el uso de constructor esta deprecated